--- a/_includes/post_footer.html
+++ b/_includes/post_footer.html
@@ -1,8 +1,9 @@
 <p>-------</p>
 <p>
   Dr. Julie Wei is a pediatric ear, nose, and throat specialist and the
-  author of <a href="http://ahealthierwei.com" target="_blank">A Healthier Wei</a>.
-  As a mother herself,  Dr. Wei is a  passionate advocate for improving children's
+  author of <a href="http://ahealthierwei.com" target="_blank">A Healthier
+  Wei</a>.
+  As a mother herself, Dr. Wei is a passionate advocate for improving children's
   health through better diet and dietary
   habits. She has been committed to helping parents learn how to eliminate their
   child's ear, nose, and throat problems simply by reducing excessive sugar and
