--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -29,4 +29,5 @@ layout: default
     {% include post_footer.html %}
   </article>
   {% include post_nav.html %}
+  {% include book_ad.html %}
 </div>
